--- a/TocchioMaratonaApp/TocchioMaratonaApp/MainWindow.xaml
+++ b/TocchioMaratonaApp/TocchioMaratonaApp/MainWindow.xaml
@@ -5,18 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TocchioMaratonaApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Maratoneeeeeeeeeee" Height="450" Width="800">
     <StackPanel>
         <Button x:Name="BtnLeggiDaFile" Content="Leggi da file" Click="BtnLeggiDaFile_Click"/>
-        <DataGrid x:Name="DgElencoBrani" Height="300" />
-        <Label Content="Inserisci il nome del titolo:"/>
-        <TextBox x:Name="TxtTitolo" />
-        <Label x:Name="LblArtista" />
-        <Button x:Name="BtnCercaArtista" Content="Cerca Artista" Click="BtnCercaArtista_Click"/>
-        <Label Content="Inserisci il nome dell'album:"/>
-        <TextBox x:Name="TxtAlbum" />
-        <Label x:Name="LblNumBrani" />
-        <Button x:Name="BtnContaBrani" Content="Conta Brani" Click="BtnContaBrani_Click"/>
+        <DataGrid x:Name="DgElencoMaratone" Height="300" />
+       
+        <Label x:Name="LblNumMaratone" />
+        
         <Label x:Name="LblDurata" />
         <Button x:Name="BtnDurata" Content="Calcola durata totale" Click="BtnDurata_Click"/>
     </StackPanel>
